v2.4.9
- Added support for the recording channelType property to distinguish between radio and tv recordings (requires TVServerKodi v1.15.0.136 or above)

v2.4.8
- Add Estuary skin support for the old series timer dialog
- Fixed: various Coverity reported issues for Live555 (part 2)
- Fixed: PVR recordings episode name being set to subplot.

v2.4.7
- Fixed: Live555: Android compile fix

v2.4.6
- Fixed: various Coverity reported issues for Live555

v2.4.5
- Cosmetics: remove the remark about "tsreader + FFmpeg".
- TSReader: add Live555 RTSP support back. Current ffmpeg rtsp streams are quite unstable.
- Add ipv6 support for connecting to the TVServerKodi plugin.

v2.4.4
- Updated language files from Transifex

v2.4.3
- Updated language files from Transifex

v2.4.2
- Updated language files from Transifex

v2.4.1
- Updated language files from Transifex

v2.4.0
- Cmake: rename find_package kodi to Kodi

v2.3.1
- Fix includes

v2.3.0
- Updated to PVR addon API v5.2.0

v2.2.0
- Updated to PVR addon API v5.1.0

v2.1.1
- Timers: reduce the amount of magic numbers (PVR API 5.0.0)
- Recordings: implement the new iChannelUid field (PVR API 5.0.0)

v2.1.0
- Updated to PVR addon API v5.0.0

v2.0.4
- Timer: fixed: 'unable to resolve timer type' warnings (Kodi expects a manual, no EPG timer type)
- Timer: fixed: timer disabled state (PVR_TIMER_STATE_CANCELLED should now be PVR_TIMER_STATE_DISABLED)
- Timer: fixed: don't show the unsupported 'folder' field

v2.0.3
- Coverity fixes

v2.0.2
- Updated to PVR API v4.2.0

v2.0.1
- Updated language files from Transifex

v2.0.0
- Initial Kodi Krypton version.

v1.12.0
- Timer: Add series recording timer types support
- Timer: Add an backward compatibility option to re-enable the pre-Jarvis series recording dialog
- Timer: show EPG description
- Recordings: pass recording series and episode numbers to Kodi

v1.11.12
- Updated language files from Transifex

v1.11.11
- Compile fix for gcc 5
- Remove the "unstable" notice from the disclaimer