@@ -1,4 +1,5 @@
 v2.4.9
+- Add support for asynchronous connect. The addon will now regularly try to connect to the backend if it is not connected already.
 - Added support for the recording channelType property to distinguish between radio and tv recordings (requires TVServerKodi v1.15.0.136 or above)
 
 v2.4.8
